--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                     <img src="./assets/git.png" class="img-thumbnail">
                     <div class="card-body">
                         <h5 class="card-title">Git</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum
-                            omnis eius praesentium mollitia</p>
+                        <p class="card-text">Git is a distributed version-control system for tracking changes in source code during software development. It is designed for coordinating work among programmers, but it can be used to track changes in any set of files. </p>
                     </div>
                 </div>
             </div>
@@ -56,8 +55,7 @@
                     <img src="./assets/github.png" class="img-thumbnail">
                     <div class="card-body">
                         <h5 class="card-title">GitHub</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum
-                            omnis eius praesentium mollitia</p>
+                        <p class="card-text">GitHub is a for-profit company that offers a cloud-based Git repository hosting service. Essentially, it makes it a lot easier for individuals and teams to use Git for version control and collaboration.</p>
                     </div>
                 </div>
             </div>
@@ -66,8 +64,7 @@
                     <img src="./assets/mysql.png" class="img-thumbnail">
                     <div class="card-body">
                         <h5 class="card-title">MySQL</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum
-                            omnis eius praesentium mollitia</p>
+                        <p class="card-text">MySQL is an open-source relational database management system. Its name is a combination of "My", the name of co-founder Michael Widenius's daughter, and "SQL", the abbreviation for Structured Query Language.</p>
                     </div>
                 </div>
             </div>
@@ -76,8 +73,7 @@
                     <img src="./assets/django.png" class="img-thumbnail">
                     <div class="card-body">
                         <h5 class="card-title">Django</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum
-                            omnis eius praesentium mollitia</p>
+                        <p class="card-text">Django is a Python-based free and open-source web framework that follows the model-template-view architectural pattern. It is maintained by the Django Software Foundation, an American independent organization established as a 501 non-profit.</p>
                     </div>
                 </div>
             </div>
@@ -96,8 +92,7 @@
                     <img src="./assets/android-studio-logo.png" class="img-thumbnail">
                     <div class="card-body">
                         <h5 class="card-title">Android Studio</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum
-                            omnis eius praesentium mollitia</p>
+                        <p class="card-text">Android Studio is the official integrated development environment for Google's Android operating system, built on JetBrains' IntelliJ IDEA software and designed specifically for Android development. It is available for download on Windows, macOS and Linux based operating systems. </p>
                     </div>
                 </div>
             </div>
